# SkillTask

./: .gitignore
10 первая работа в IDE/ConsoleApplication1/: ConsoleApplication1.sln
10 первая работа в IDE/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp
10 первая работа в IDE/ConsoleApplication2/: ConsoleApplication2.sln
10 первая работа в IDE/ConsoleApplication2/ConsoleApplication2/: ConsoleApplication2.cpp  ConsoleApplication2.vcxproj
10 первая работа в IDE/ConsoleApplication3/ConsoleApplication3/: ConsoleApplication3.vcxproj
10 первая работа в IDE/ConsoleApplication4/ConsoleApplication4/: ConsoleApplication4.cpp
10 первая работа в IDE/ConsoleApplication5/: ConsoleApplication5.sln
10 первая работа в IDE/ConsoleApplication5/ConsoleApplication5/: ConsoleApplication5.cpp  ConsoleApplication5.vcxproj
10 первая работа в IDE/ConsoleApplication6/: ConsoleApplication6.sln
11 функции/travelTimeTuskThree(9)/travelTime(9)/: travelTime(9).vcxproj  travelTime(9).vcxproj.filters  travelTimeTuskTgree(9).cpp
11 функции/tuskFour(10)/tuskFour(10)/: tuskFour(10).cpp
11 функции/tuskNumberOne(7)/: tuskNumberOne(7).sln
11 функции/tuskNumberOne(7)/tuskNumberOne(7)/: tuskNumberOne(7).cpp  tuskNumberOne(7).vcxproj.filters
11 функции/tuskNumberTwo(8)/: tuskNumberTwo(8).sln
12 одномерные массивы/tuskOne(11)/tuskOne(11)/: tuskOne(11).cpp
12 одномерные массивы/tuskTwo(12)/: tuskTwo(12).sln
13 vector v2/tuskFive(18)/: tuskFive(18).sln
13 vector v2/tuskFour(17)/: tuskFour(17).sln
13 vector v2/tusktwo(15)/: tusktwo(15).sln
14 двумерные массивы/task four/: task four.sln
14 двумерные массивы/tusk one/: tusk one.sln
14 двумерные массивы/tusk two/: tusk two.sln
15 алгоритны над массивами/tusk 5/: tusk 5.sln
17 указатели/task 3/: task 3.sln
18 раширенная работа с функциями/task 1/: task 1.sln
19 чтение из файлов/task 1/: task 1.sln
19 чтение из файлов/task 2/: task 2.sln  words.txt
19 чтение из файлов/task 4/: task 4.sln
19 чтение из файлов/task 5/: question_file.txt
20 запись в файл (1)/task 1.2/: my_file.txt
20 запись в файл (1)/task 2/: my_art.txt
20 запись в файл (1)/task 3/: task 3.sln
21 структуры данных (!!!)/task 2 (!!!)/: task 2.sln
21 структуры данных (1)/task 3/: task 3.sln
24 работа с датами/task 1/: task 1.sln
24 работа с датами/task 2/: task 2.sln
24 работа с датами/task 3/: task 3.sln
26 ООП часть 1/task 2/: task 2.sln
26 ООП часть 1/task-3.1/task-3.1/: CMakeLists.txt  main.h  window.h
27 ООП часть 2 (1)/Task 3 Best/: Task 3.sln
27 ООП часть 2 (1)/task 1/: task 1.sln
27 ООП часть 2 (1)/task 2/: task 2.sln
28 потоки/task 1/: task 1.sln
29 парадигмы ООП/task 1/: task 1.sln
30 HTTP запросы cpr/task/: CMakeLists.txt
30 HTTP запросы cpr/task1/: CMakeLists.txt  CMakePresets.json  main.cpp
30 HTTP запросы cpr/task3/: CMakeLists.txt  main.cpp
31 smatr ptr и доп возможности классов/task1/: task1.sln
31 smatr ptr и доп возможности классов/task2/: task2.sln
32 json nlohman/task3/: CMakeLists.txt  task3.cpp
33 исключения и шаблонные функцие/task 4/: task 4.sln
35 Qt Новые возможности C++/build-task1-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: CMakeCache.txt
35 Qt Новые возможности C++/task 1-2/task-1-2/: CMakeLists.txt  main.cpp
35 Qt Новые возможности C++/task3/: CMakeLists.txt  main.cpp
35 Qt/task1/: CMakeLists.txt
36 Виджеты Qt/QtProject/task-1/: CMakeLists.txt  circuls.cpp  circuls.h  main.cpp
36 Виджеты Qt/build-task-1-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
36 Виджеты Qt/task-1/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  circuls.cpp  circuls.h  main.cpp
36 Виджеты Qt/task-1/MyButton/: MyButton.cpp  MyButton.h
36-Widgets-Qt/ClionTask/: CMakeLists.txt  main.cpp
37-Qml/Calculator/: CMakeLists.txt  Calculator.ui  CalculatorMainWindow.h  main.cpp
37-Qml/Player/: CMakeLists.txt  main.qml
37-Qml/Tv/: CMakeLists.txt  Controler.h  Controler.ui  main.cpp
37-Qml/build-Player-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
38-NewQt/HTML code/: CMakeLists.txt
38-NewQt/QtButtonS/: CMakeLists.txt  main.cpp
38-NewQt/SoundButton/: CMakeLists.txt  main.cpp
38-NewQt/build-HtmlCreate-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/: CMakeCache.txt  cmake_install.cmake
38-NewQt/build-SoundButton-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: CMakeCache.txt  cmake_install.cmake
38-NewQt/untitled1/: CMakeLists.txt  Ide.h  MiniIDEHTML.ui  main.cpp
number 10/ConsoleApplication3/: ConsoleApplication3.sln
number 10/ConsoleApplication4/: ConsoleApplication4.sln
number 11/travelTimeTuskThree(9)/: travelTime(9).sln
number 11/tuskFour(10)/: tuskFour(10).sln
number 12/tuskOne(11)/: tuskOne(11).sln
number 12/tuskThree(13)/: tuskThree(13).sln
number 13/tusk1(14)/: tusk1(14).sln
number 13/tuskthree(16)/: tuskthree(16).sln
number 14/Task three/: Task three.sln
number 15/task 1/: task 1.sln
number 15/task 2/: task 2.sln
number 15/task 3/: task 3.sln
number 15/task 4/: task 4.sln
number 17/task 1/: task 1.sln
number 17/task 2/: task 2.sln
number 18/task 2/: task 2.sln
number 18/task 3/: task 3.sln
number 19/task 3/: task 3.sln
number 19/task 5/: task 5.sln
number 20 1 best/task 1.2/: task 1.2.sln
number 20 1 best/task 2/: task 2.sln
number 20 1 best/task 4 best1/: task 4.sln
number 21 1 best/task 1/: task 1.sln  user.txt
number 22/task 1/: task 1.sln
number 22/task 2/: task 2.sln
number 22/task 2.1/: task 2.1.sln
number 22/task 3/: task 3.sln
number 23/task 1/: task 1.sln
number 23/task 2/: task 2.sln
number 23/task 3/: task 3.sln
number 25/task 1/: task 1.sln
number 26/task 1/: task 1.sln
number 26/task 3/: task 3.sln
number 26/task-3.1/: CMakeLists.txt
number 28/task 2/: task 2.sln
number 28/task 3/: task 3.sln
number 30 не готово/task1/: CMakeLists.txt
number 32/task1/: CMakeLists.txt
number 32/task3/: record.pb.h
number 33/task 1/: task 1.sln
number 33/task 2/: task 2.sln
number 33/task 3/: task 3.sln
(+266 files in other folders)
